fixed layout spacing

--- a/jason/css/styles.css
+++ b/jason/css/styles.css
@@ -39,14 +39,14 @@ body {
     height: 60px;
     background-color: #333333;
     border: 1px solid;
-    border-radius: 5px;
+    border-radius: 7px;
     margin-top: -30px;
 }
 
 #nav-section {
     height: 60px;
     margin: 0px 150px;
-    padding: 0px 65px;
+    padding: 0px 70px;
 
 }
 
@@ -77,6 +77,7 @@ body {
 #footer {
     height: 120px;
     background-color: #333333;
+    border-top: 1px solid black;
 }
 
 #footnote {
@@ -89,31 +90,32 @@ body {
 
 #jumbotron {
     background-color: #99cccc;
-    border-radius: 5px;
+    border-radius: 7px;
     margin-top: 40px;
     height: 300px;
 }
 
 #description {
     display: inline-block;
-    width: 490px;
+    width: 510px;
     height: 240px;
     vertical-align: top;
     margin: 40px 20px 20px 70px;
 }
 
 #description > p {
-    font-size: 1.6em;
+    font-size: 1.75em;
     font-weight: lighter;
+    font-color: #333333;
 }
 
 #description > p > span{
-    font-weight: bold;
+    font-weight: 600;
 }
 
 #jumbo-logo {
     display: inline-block;
-    width: 300px;
+    width: 280px;
     margin: 20px 20px 20px 20px;
     vertical-align: top;
     height: 240px;
@@ -123,15 +125,15 @@ body {
     background-image: url('../../Assets/ship.png');
     background-repeat: no-repeat;
     height: 170px;
-    margin-top: -40px;
-    margin-bottom: 30px;
+    margin-top: -42px;
+    margin-bottom: 45px;
 
 }
 
 #button {
     background-color: #666666;
     height: 60px;
-    width: 300px;
+    width: 290px;
     border-bottom: 6px solid #333333;
     text-align: center;
     line-height: 60px;
@@ -140,11 +142,23 @@ body {
     font-weight: lighter;
 }
 
+#button > span {
+    font-size: 1.2em;
+}
+
+#jumbo-logo > a > #button {
+    transition:background-color 1s;
+}
+
 #jumbo-logo > a > #button:hover {
     background-color: #444444;
+    border-bottom-color: #222222;
     color: #cccccc;
 }
 
+.block-link > .block-section {
+    transition:background-color 1s;
+}
 .block-link > .block-section:hover {
     background-color: #444444;
 }
@@ -153,7 +167,7 @@ body {
     background-color: #666666;
     height: 320px;
     margin: 40px 0px;
-    border-radius: 5px;
+    border-radius: 7px;
     color: white;
     text-align: center;
     width: 300px;
@@ -186,7 +200,7 @@ body {
 }
 
 .lower-block > p {
-    font-size: .9em;
+    font-size: 1em;
     font-weight: lighter;
 }
 
@@ -238,12 +252,13 @@ body {
 
 .lower-third-block {
     vertical-align: middle;
-    line-height: 60px;
+    line-height: 80px;
     border-top: 1px solid #777777;
+    transition:background-color 1s;
 }
 
 .lower-third-block:hover{
-    height: 60px;
+    height: 80px;
     background-color: #444444;
     border-radius: 5px;
 }
